--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ build/*.deb
 src/Blowfish/opt/oc-lora-gw-pf-dev/bin/
 src/Blowfish/opt/oc-lora-gw-pf-dev/bin/*
 lora_gateway/libloragw/libloragw.a
+src/RAK831/opt/oc-lora-gw-pf-dev/bin/
+src/RHF0M301/opt/oc-lora-gw-pf-dev/bin/
+lora_gateway/libloragw/test_loragw_cal
+lora_gateway/libloragw/test_loragw_gps
+lora_gateway/libloragw/test_loragw_hal
+lora_gateway/util_pkt_logger/util_pkt_logger
+lora_gateway/util_tx_continuous/util_tx_continuous
+lora_gateway/util_tx_test/util_tx_test
+packet_forwarder/lora_pkt_fwd/lora_pkt_fwd
