--- a/src/RHF0M301/opt/oc-lora-gw-pf-dev/service/oc-lora-gw-pf-dev.service
+++ b/src/RHF0M301/opt/oc-lora-gw-pf-dev/service/oc-lora-gw-pf-dev.service
@@ -15,6 +15,7 @@ WorkingDirectory=/opt/oc-lora-gw-pf-dev/configs
 ExecStartPre=/opt/oc-lora-gw-pf-dev/scripts/gwrst.sh
 ExecStartPre=/opt/oc-lora-gw-pf-dev/scripts/update_gwid.sh /opt/oc-lora-gw-pf-dev/configs/local_conf.json
 ExecStart=/opt/oc-lora-gw-pf-dev/bin/lora_pkt_fwd
+Nice=-20
 
 [Install]
 WantedBy=multi-user.target
